Added inheritIO to handle input/output from child program.